# Scrabble

./: CMakeLists.txt  README.md  affichPlat.c  dico.txt  dictionnaire.c  header.h  initPartie.c  initPlat.c  main.c  menu.c  partie.c  pioche.c  piocherJeton.c  placementMot.c  plateau.cbp  plateau.depend  plateau.layout  reglesAide.c  score.c
